2001-05-10  Christian Stimming  <stimming@tuhh.de>

	* src/scm/report/account-summary.scm, balance-sheet.scm, pnl.scm:
	moved foreign currency display option to display tab.

	* src/scm/html-utilities.scm
	(gnc:html-acct-table-comm-row-helper!): fixed display bug.

	* src/engine/gnc-pricedb.c (gnc_pricedb_lookup_nearest_in_time):
	Fixed this function so that it works properly now.

	* src/scm/commodity-utilities.scm
	(gnc:get-match-commodity-splits): fix bug.

2001-05-09  Dave Peticolas  <dave@krondo.com>

	* src/doc/design/engine.texinfo: update docs

	* src/engine/*.[ch]: add GPL headers

2001-05-09  Christian Stimming  <stimming@tuhh.de>

	* src/scm/report/price-scatter.scm: use the configurable report
	title.

2001-05-09  Dave Peticolas  <dave@krondo.com>

	* src/doc/design/user-preferences.texinfo: update docs

	* src/doc/design/reports.texinfo: update docs

	* src/doc/design/top-level.texinfo: update docs

	* src/doc/design/register.texinfo: update docs

	* src/doc/design/component-manager.texinfo: update docs

2001-05-09  Christian Stimming  <stimming@tuhh.de>

	* src/scm/report/price-scatter.scm: Added new option: get weighted
	average prices from the past, not only the instant prices.

	* src/scm/commodity-utilities.scm
	(gnc:get-commodity-totalaverage-prices): Added
	function. Eventually this could be an extension/alternative to
	prices from the pricedb.

2001-05-09  Robert Graham Merkel  <rgmerk@mira.net>

	* src/scm/report/net-barchart.scm: check for empty data
	and empty account lists.

	* src/scm/report/category-barchart.scm: check for empty
	data, print a nice error message.

	* src/scm/html-piechart.scm: now produces a warning if an
	empty piechart is sent to it.

	* src/scm/html-barchart.scm: now checks for and warns
	against empty barcharts

2001-05-08  Christian Stimming  <stimming@tuhh.de>

	* src/scm/options-utilities.scm, src/scm/report/price-scatter.scm:
	moved gnc:options-add-marker-choice! from price-scatter.scm to
	options-utilities.scm.
